v1.4.2
-Changed String compare operations from compareTo() to equals()
-Added hasField method in SoffitObject

v1.3.1
-Corrected an issue that would cause the ReadStream method to endlessly loop if it encountered an EOS at the very beginning of the input stream.

v1.3.0
-Added support for null fields.
-Removed the SimpleSerialSoffitObject abstract class, as it is beyond the scope of this library.

v1.2.0
-Added SimpleSerialSoffitObject abstract class.

v1.1.1
-Eliminated the use of the Scanner class as it can cause issues from eating the entire input stream.

v1.1.0
-Added ReadStreamFromString method
-Added WriteStreamToString method

v1.0.1
-Replaced null returns for SoffitExceptions in the get field/object methods when the property isn't found.