@@ -1,6 +1,7 @@
 v1.4.2
 -Changed String compare operations from compareTo() to equals()
 -Added hasField method in SoffitObject
+-Adjusted exception handling for SoffitUtil.WriteStream (may break current code, but should be easy to handle.)
 
 v1.3.1
 -Corrected an issue that would cause the ReadStream method to endlessly loop if it encountered an EOS at the very beginning of the input stream.
